--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         </div>
     </section>
 
+    <section>
+        <h2>Filmes e Séries</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"   >
+                <img src=""
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
