--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Filmes e Séries</h2>
         <div>
             <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"   >
-                <img src=""
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg"/>
             </a>
         </div>
     </section>
