--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>ALURAFLIX</header>
 
-    <section>
+    <section class="chamada">
         <div class=" chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="categoria">
         <h2>Filmes e Séries</h2>
         <div>
             <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"   >
