--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html lang="pt-BR">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Aluraflix</title>
 </head>
@@ -27,22 +30,22 @@
     <section class="categoria">
         <h2>Filmes e Séries</h2>
         <div>
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"   >
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8"   >
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc"   >
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw"   >
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis"   >
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
             </a>
-        
+
         </div>
     </section>
 </body>
